2008-02-07  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/metadata_mapping.htm:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	* tests/icles/metadata_editor.c:
	* tests/icles/metadata_editor.glade:
	  Add more tags. Improve test app.

2008-02-07  Stefan Kost  <ensonic@users.sf.net>

	* gst/multifile/gstmultifilesink.c:
	  Add a fixme comment.

	* gst/selector/gstoutputselector.c:
	  Fix same leak as in input-selector.

	* tests/icles/output-selector-test.c:
	  Improve the test.

2008-02-07  Stefan Kost  <ensonic@users.sf.net>

	* gst/spectrum/gstspectrum.c:
	  Improve the docs.

2008-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  The dc1394 plugin seems to use API that was removed or changed
	  before the final 2.0.0 release, so only build it if 2.0.0-rc5
	  is available. Someone needs to port it to the final API.

	* ext/dc1394/gstdc1394.c: (gst_dc1394_change_camera_transmission):
	  Include string.h for memcpy and use g_usleep instead of usleep.

2008-02-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/filter/gstlpwsinc.c:
	Fix typo in the long description of the element.

2008-02-07  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/xingheader/Makefile.am:
	Put CFLAGS and LIBS in the right order

2008-02-06  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  ximagesrc has moved to -good, so no need to check for
	  the required X libs here any more.

2008-02-06  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Wouter Cloetens <wouter at mind dot be>

	* ext/soup/gstsouphttpsrc.c: (gst_soup_http_src_got_chunk_cb),
	(gst_soup_http_src_create):
	Fix memory leak and improve debugging a bit.

2008-02-05  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/metadata_mapping.htm:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	  Add more tags mapping.
